use std::net::SocketAddr;
use std::sync::Arc;
use std::time::{SystemTime, UNIX_EPOCH};
use tonic::{Request, Response, Status};

use crate::config::CoreEngineConfig;
use crate::proto::common::*;
use crate::proto::core_engine::*;

pub struct CoreEngineServiceImpl {
    config: CoreEngineConfig,
}

impl CoreEngineServiceImpl {
    pub fn new(config: CoreEngineConfig) -> Self {
        Self { config }
    }
}

#[tonic::async_trait]
impl core_engine_service_server::CoreEngineService for CoreEngineServiceImpl {
    async fn health_check(
        &self,
        request: Request<HealthCheckRequest>,
    ) -> Result<Response<HealthCheckResponse>, Status> {
        let req = request.into_inner();
        
        // Basic health check - always return healthy for now
        let response = HealthCheckResponse {
            healthy: true,
            status: "healthy".to_string(),
            version: env!("CARGO_PKG_VERSION").to_string(),
            uptime: Some(prost_types::Timestamp {
                seconds: SystemTime::now()
                    .duration_since(UNIX_EPOCH)
                    .unwrap()
                    .as_secs() as i64,
                nanos: 0,
            }),
            details: {
                let mut details = std::collections::HashMap::new();
                details.insert("service".to_string(), "core-engine".to_string());
                details.insert("port".to_string(), self.config.grpc_port.to_string());
                details.insert("processors".to_string(), self.config.num_processors.to_string());
                details
            },
            dependencies: vec![
                HealthCheckDependency {
                    name: "database".to_string(),
                    healthy: true, // TODO: Actually check database
                    status: "connected".to_string(),
                    response_time_ms: 5,
                },
                HealthCheckDependency {
                    name: "redis".to_string(),
                    healthy: true, // TODO: Actually check redis
                    status: "connected".to_string(),
                    response_time_ms: 2,
                },
                HealthCheckDependency {
                    name: "redpanda".to_string(),
                    healthy: true, // TODO: Actually check redpanda
                    status: "connected".to_string(),
                    response_time_ms: 10,
                },
            ],
        };

        Ok(Response::new(response))
    }

    async fn get_status(
        &self,
        _request: Request<prost_types::Empty>,
    ) -> Result<Response<EngineStatusResponse>, Status> {
        let response = EngineStatusResponse {
            status: ResponseStatus::ResponseStatusSuccess as i32,
            message: "Core Engine is running".to_string(),
            engine_status: Some(EngineStatus {
                status: EngineStatus::EngineStatusRunning as i32,
                version: env!("CARGO_PKG_VERSION").to_string(),
                start_time: Some(prost_types::Timestamp {
                    seconds: SystemTime::now()
                        .duration_since(UNIX_EPOCH)
                        .unwrap()
                        .as_secs() as i64,
                    nanos: 0,
                }),
                uptime: Some(prost_types::Timestamp {
                    seconds: SystemTime::now()
                        .duration_since(UNIX_EPOCH)
                        .unwrap()
                        .as_secs() as i64,
                    nanos: 0,
                }),
                num_processors: self.config.num_processors as i32,
                buffer_size: self.config.buffer_size as i64,
                total_messages_processed: 0,
                messages_per_second: 0.0,
                avg_latency_us: 0.0,
                p99_latency_us: 0.0,
                memory_usage_bytes: 0,
                cpu_usage_percent: 0.0,
            }),
            engine_info: Some(EngineInfo {
                version: env!("CARGO_PKG_VERSION").to_string(),
                start_time: Some(prost_types::Timestamp {
                    seconds: SystemTime::now()
                        .duration_since(UNIX_EPOCH)
                        .unwrap()
                        .as_secs() as i64,
                    nanos: 0,
                }),
                uptime: Some(prost_types::Timestamp {
                    seconds: SystemTime::now()
                        .duration_since(UNIX_EPOCH)
                        .unwrap()
                        .as_secs() as i64,
                    nanos: 0,
                }),
                num_processors: self.config.num_processors as i32,
                buffer_size: self.config.buffer_size as i64,
                total_messages_processed: 0,
                messages_per_second: 0.0,
                avg_latency_us: 0.0,
                p99_latency_us: 0.0,
                memory_usage_bytes: 0,
                cpu_usage_percent: 0.0,
            }),
            active_agents: vec![],
        };

        Ok(Response::new(response))
    }

    async fn process_message(
        &self,
        _request: Request<ProcessMessageRequest>,
    ) -> Result<Response<ProcessMessageResponse>, Status> {
        // TODO: Implement actual message processing
        Err(Status::unimplemented("ProcessMessage not yet implemented"))
    }

    async fn process_message_stream(
        &self,
        _request: tonic::Streaming<ProcessMessageRequest>,
    ) -> Result<Response<tonic::codec::Streaming<ProcessMessageResponse>>, Status> {
        // TODO: Implement actual message stream processing
        Err(Status::unimplemented("ProcessMessageStream not yet implemented"))
    }

    async fn batch_process_messages(
        &self,
        _request: Request<BatchProcessMessagesRequest>,
    ) -> Result<Response<BatchProcessMessagesResponse>, Status> {
        // TODO: Implement actual batch processing
        Err(Status::unimplemented("BatchProcessMessages not yet implemented"))
    }

    async fn register_agent(
        &self,
        _request: Request<RegisterAgentRequest>,
    ) -> Result<Response<StandardResponse>, Status> {
        // TODO: Implement agent registration
        Err(Status::unimplemented("RegisterAgent not yet implemented"))
    }

    async fn unregister_agent(
        &self,
        _request: Request<UnregisterAgentRequest>,
    ) -> Result<Response<StandardResponse>, Status> {
        // TODO: Implement agent unregistration
        Err(Status::unimplemented("UnregisterAgent not yet implemented"))
    }

    async fn list_agents(
        &self,
        _request: Request<ListAgentsRequest>,
    ) -> Result<Response<ListAgentsResponse>, Status> {
        // TODO: Implement agent listing
        Err(Status::unimplemented("ListAgents not yet implemented"))
    }

    async fn get_agent_status(
        &self,
        _request: Request<GetAgentStatusRequest>,
    ) -> Result<Response<GetAgentStatusResponse>, Status> {
        // TODO: Implement agent status
        Err(Status::unimplemented("GetAgentStatus not yet implemented"))
    }

    async fn get_configuration(
        &self,
        _request: Request<GetConfigurationRequest>,
    ) -> Result<Response<GetConfigurationResponse>, Status> {
        // TODO: Implement configuration retrieval
        Err(Status::unimplemented("GetConfiguration not yet implemented"))
    }

    async fn update_configuration(
        &self,
        _request: Request<UpdateConfigurationRequest>,
    ) -> Result<Response<StandardResponse>, Status> {
        // TODO: Implement configuration update
        Err(Status::unimplemented("UpdateConfiguration not yet implemented"))
    }

    async fn get_metrics(
        &self,
        _request: Request<GetMetricsRequest>,
    ) -> Result<Response<GetMetricsResponse>, Status> {
        // TODO: Implement metrics retrieval
        Err(Status::unimplemented("GetMetrics not yet implemented"))
    }

    async fn get_performance_stats(
        &self,
        _request: Request<prost_types::Empty>,
    ) -> Result<Response<PerformanceStatsResponse>, Status> {
        // TODO: Implement performance stats
        Err(Status::unimplemented("GetPerformanceStats not yet implemented"))
    }
}
